# ATOM

./: .cursorignore  .gitignore  MD_viz.py  README.md  config.toml  custom_dataloader.py  model.py  print_md17_info.py  pyproject.toml  train.py  utils.py
Dataloaders/: custom_dataloader.py
Z_paper_content/: GTNO_diagram.drawio  ablations.py  analyze_folds.py  dataset_info.py  figures.py  get_runtimes.py  scaling_laws.py  trajectory_visualisation.py  zero_shot_inference.py
Z_paper_content/ablations/: ablations.py
Z_paper_content/dataset/: dataset_info.py
configs/: config.toml  egno_paper_params.toml  gtno_multitask_base.toml
configs/davy/: atom_singletask_butanol_fold5st.toml  atom_singletask_indole_fold3st.toml  atom_singletask_napthalene_fold4st.toml  atom_singletask_nitrobenzene_fold2st.toml  atom_singletask_uracil_fold1st.toml  egno_multitask_muon_fold2.toml
configs/davy2/: z_ATOM_Pretrained.toml  z_ATOM_Pretrained5.toml  z_ATOM_Pretrained6.toml  z_ATOM_Pretrained7.toml
configs/giga_run/: atom_multitask_muon_fold1.toml  atom_multitask_muon_fold2.toml  atom_multitask_muon_fold3.toml  atom_multitask_muon_fold4.toml  atom_multitask_muon_fold5.toml  egno_multitask_muon_fold1.toml  egno_multitask_muon_fold2.toml  egno_multitask_muon_fold3.toml  egno_multitask_muon_fold4.toml  egno_multitask_muon_fold5.toml
configs/gtno_ablations/: default.toml  delta_update.toml  fixed_value_residual.toml  no_equivariant_lifting.toml  no_noise.toml  no_rope.toml  no_tensor_product.toml  no_value_residual.toml  regular_att.toml  regular_att_no_rope.toml  rope_10k.toml  rope_1m.toml  silu.toml
configs/learnable_denom/: learnable_denom_aspirin.toml  learnable_denom_uracil.toml
configs/md17_paper/: md_aspirin.toml  md_benzene.toml  md_ethanol.toml  md_malonaldehyde.toml  md_naphtalene.toml  md_salicylic.toml  md_toluene.toml  md_uracil.toml  rmd_azobenzene.toml  rmd_benzene.toml  rmd_ethanol.toml  rmd_malonaldehyde.toml  rmd_naphthalene.toml  rmd_paracetamol.toml  rmd_salicylic.toml  rmd_toluene.toml  rmd_uracil.toml
configs/md17_paper_egno/: md_aspirin.toml  md_benzene.toml  md_ethanol.toml  md_malonaldehyde.toml  md_naphtalene.toml  md_salicylic.toml  md_toluene.toml  md_uracil.toml  rmd_azobenzene.toml  rmd_benzene.toml  rmd_ethanol.toml  rmd_malonaldehyde.toml  rmd_naphthalene.toml  rmd_paracetamol.toml  rmd_salicylic.toml  rmd_toluene.toml  rmd_uracil.toml
configs/multitask_runs/: atom_multitask_muon.toml  egno_multitask_muon.toml
configs/n_body/: nbody_atom.toml  nbody_egno.toml
configs/p_invariance/: p10.toml  p12.toml  p14.toml  p16.toml  p4.toml  p6.toml  p8.toml
configs/rope_bases/: 100.toml  1000.toml  10000.toml  100000.toml  100000p16.toml  10000p16.toml  1000p16.toml  100p16.toml
configs/scaling_done/: atom_scaling_10.toml  atom_scaling_15.toml  atom_scaling_2.toml  atom_scaling_20.toml  atom_scaling_30.toml  atom_scaling_40.toml  atom_scaling_5.toml  atom_scaling_50.toml
configs/scaling_law/: atom_scaling_60.toml  atom_scaling_66.toml
configs/t_invariance/: 1000.toml  10000.toml  100000.toml  300.toml  3000.toml  30000.toml
configs/t_invariance_egno/: 1000 EGNO.toml  10000 EGNO.toml  100000 EGNO.toml  300 EGNO.toml  3000 EGNO.toml  30000 EGNO.toml
configs/tg80/: atom_singletask_nitrobenzene.toml  atom_singletask_uracil.toml
configs/tg80_ablation/: atom_multitask_muon_fold1.toml  atom_multitask_muon_fold1_output_heads_1.toml  atom_multitask_muon_fold2_output_heads_1.toml  atom_multitask_muon_fold3_output_heads_1.toml  atom_multitask_muon_fold5.toml  (+2 more)
tests/: test_cross_attentions.py  test_dataloader_functions.py  test_equivariance.py  test_shape_utils.py
(+88 files in other folders)
