[tool.poetry]
name = "ATOM"
version = "0.1.2"
description = ""
authors = ["Luke Thompson <luke-a-thompson@outlook.com>"]
readme = "README.md"
keywords = ["graph transformer", "quantum chemistry", "molecular dynamics", "neural operator"]

[[tool.poetry.packages]]
include = "atom"
from = "src"

[tool.poetry.scripts]
train = "atom.train:main"
inference = "atom.inference:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
pandas = "^2.1.0"
torch = "^2.5.1"
e3nn = "^0.5.4"
tensordict = "^0.7.0"
pytorch_optimizer = "^3.3.4"
pydantic = "^2.10.6"
wandb = "0.18.3"
tqdm = "^4.67.1"

matplotlib = "^3.8.0"
usyd-colors = "^0.1.0"
pubchempy = "^1.0.4"
rdkit = "^2024.9.6"
tlparse = "^0.3.37"
statsmodels = "^0.14.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
types-tqdm = "^4.67.0.20241119"
pandas-stubs = "^2.2.3.241126"

[tool.poetry.extras]
visualization = ["matplotlib", "usyd-colors"]
chemical_sieve = ["pubchempy", "rdkit"]

[tool.black]
line-length = 150
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "*/.mypy_cache", "**/.pytest_cache"]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
